--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -142,7 +142,7 @@ iframe{
         width: 100%;
         height: 100%;
         z-index: 2147483647;
-        margin-top: -113px;
+        top: 0;
     }
 
     .game-view .header-game-view {
@@ -161,10 +161,6 @@ iframe{
 
     .btn-cassino {
         padding: 5px;
-    }
-
-    .header-game-view {
-        margin: 14px 0 0;
     }
 }
 
