--- a/src/app/shared/layout/app-layouts/cassino-layout.component.html
+++ b/src/app/shared/layout/app-layouts/cassino-layout.component.html
@@ -1,4 +1,4 @@
-<app-submenu category="cassino"></app-submenu>
+<!-- <app-submenu category="cassino"></app-submenu> -->
 <div class="base-container">
     <main>
         <router-outlet></router-outlet>
