--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -99,6 +99,7 @@ nav a {
 .category a.active, .category a:hover {
     border-bottom: 2px solid var(--highlight);
     color: var(--highlight);
+    margin-bottom: -2px;
 }
 
 .category a span {
