alterar url dos cassino aovivo

--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -152,7 +152,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -219,7 +219,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -286,7 +286,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/', game.fornecedor, game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -353,7 +353,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -421,7 +421,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -496,7 +496,7 @@
                                     [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
