--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -555,10 +555,10 @@
                         <div class="game-tile-buttons">
                             <ng-container *ngIf="!isDemo">
                                     <a *ngIf="game.gameDemo"
-                                    [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                    [routerLink]="['/', blink, game.fornecedor, game.gameID,'DEMO']"
                                     class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     <ng-container *ngIf="isLoggedIn && isCliente">
-                                        <a *ngIf="isCliente" [routerLink]="['/casino/',game.fornecedor,game.gameID]"
+                                        <a *ngIf="isCliente" [routerLink]="['/', blink, game.fornecedor, game.gameID]"
                                         class="btn btn-xs game-button-play">{{'geral.jogar' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="!isLoggedIn">
@@ -568,12 +568,12 @@
                             <ng-container *ngIf="isDemo">
                                 <ng-container *ngIf="game.fornecedor == 'pragmatic' || game.fornecedor == 'salsa'">
                                     <a *ngIf="game.gameDemo"
-                                        [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                        [routerLink]="['/', blink, game.fornecedor, game.gameID,'DEMO']"
                                         class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                     </ng-container>
                                     <ng-container *ngIf="game.fornecedor == 'spribe'">
                                         <ng-container *ngIf="isLoggedIn">
-                                            <a [routerLink]="['/casino/',game.fornecedor,game.gameID,'DEMO']"
+                                            <a [routerLink]="['/', blink, game.fornecedor, game.gameID,'DEMO']"
                                         class="btn btn-xs game-button-demo">{{'geral.demo' | translate}}</a>
                                         </ng-container>
                                         <ng-container *ngIf="!isLoggedIn">
