--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -1,91 +1,113 @@
-<div class="row mt-4">
-    <div class="col-md-6 col-sm-12">
-        <div class="alert alert-success alert-dismissible" *ngIf="exibirMensagemPagamento">
-            {{'deposito.seuPixFoiCreditado' | translate:{'novoSaldo': novoSaldo} }}
-            <button type="button" class="btn-close close" data-dismiss="alert" aria-label="Close">
-                <span class="close-x" aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-</div>
-<div class="content">
+<div id="deposito-pix">
     <form [formGroup]="form" (ngSubmit)="solicitarDeposito()" *ngIf="!pix">
-        <app-spinner *ngIf="submitting"></app-spinner>
-        <div class="row">
-            <div class="col col-sm-3 deposito-pix">
-                <div class="form-group required" [ngClass]="{'text-center': isMobile}">
-                    <label class="label">{{'deposito.informeOValor' | translate}}</label>
-                    <input currencyMask
-                           [ngClass]="{'form-control inverted-out text-left mt-3': !isMobile, 'input-valor': isMobile}"
-                           [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
-                           formControlName="valor">
-                    <app-error-msg [control]="form.get('valor')"></app-error-msg>
-                    <span class="mt-3 d-block alerta-min">
-                        {{'deposito.valorMinimo' | translate}} {{ valorMinDeposito | currency }}
-                    </span>
+        <div id="deposit-container">
+            <div id="payment-gateway-column">
+                <h3>Gateway de pagamento</h3>
+                <div class="options-container payment-gateway-options">
+                    <a class="payment-gateway-option">
+                        <div class="payment-gateway">
+                            <i class="radio"></i>
+                        </div>
+                        <div class="payment-gateway-icon"></div>
+                        <div>
+                            <span style="margin-left: 5px">{{metodoPagamento}}</span>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </div>
-        <div class="row mt-3" *ngIf="permitirBonusPrimeiroDeposito">
-            <div class="col col-sm-6 permitirBonusPrimeiroDeposito">
-                <label class="">{{'financeiro.desejaReceberBonusPrimeiroDeposito' | translate}}</label><br>
-                <a class="btn-regras-bonus" (click)="abrirRegrasBonus()">Regras do Bônus</a>
-                <div class="buttons-container mt-3">
-                    <div class="links-bonus">
-                        <a *ngIf="bonusEsportivo" class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'esportivo'}" (click)="selecionarOpcaoBonus('esportivo')">
-                            <div class="bonus">
-                                <i class="radio"></i>
-                            </div>
-                            <div class="icone-bonus">
-                                <i class="fa-solid fa-coins" style="font-size: 20px"></i>
-                            </div>
-                            <div>
-                                <span style="margin-left: 5px">{{'financeiro.receberBonus' | translate}}</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="links-bonus" *ngIf="bonusCassino" >
-                        <a class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'cassino'}" (click)="selecionarOpcaoBonus('cassino')">
-                            <div class="bonus">
-                                <i class="radio"></i>
-                            </div>
-                            <div class="icone-bonus">
-                                <i class="fa-solid fa-coins" style="font-size: 20px"></i>
-                            </div>
-                            <div>
-                                <span style="margin-left: 5px">{{'financeiro.receberBonusCassino' | translate}}</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="links-bonus">
-                        <a  class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'nenhum'}" (click)="selecionarOpcaoBonus('nenhum')">
-                            <div class="bonus">
-                                <i class="radio"></i>
-                            </div>
-                            <div class="icone-bonus">
-                                <i class="fa-solid fa-square-xmark" style="font-size: 20px"></i>
-                            </div>
-                            <div>
-                                <span style="margin-left: 5px">{{'financeiro.naoQueroBonus' | translate}}</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <app-error-msg [control]="form.get('bonus')"></app-error-msg>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col col-sm-3 deposito-pix">
-                <div class="form-group group-buttons">
-                    <button type="submit" class="btn btn-custom btn-block" [disabled]="submitting">
-                        {{'geral.depositar' | translate}}
-                    </button>
-                </div>
+            <div id="deposit-details">
+                <h3>Detalhes do depósito</h3>
             </div>
         </div>
     </form>
+    <!-- <div class="row">
+        <div class="col-md-6 col-sm-12">
+            <div class="alert alert-success alert-dismissible" *ngIf="exibirMensagemPagamento">
+                {{'deposito.seuPixFoiCreditado' | translate:{'novoSaldo': novoSaldo} }}
+                <button type="button" class="btn-close close" data-dismiss="alert" aria-label="Close">
+                    <span class="close-x" aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <form [formGroup]="form" (ngSubmit)="solicitarDeposito()" *ngIf="!pix">
+            <app-spinner *ngIf="submitting"></app-spinner>
+            <div class="row">
+                <div class="col col-sm-3 deposito-pix">
+                    <div class="form-group required" [ngClass]="{'text-center': isMobile}">
+                        <label class="label">{{'deposito.informeOValor' | translate}}</label>
+                        <input currencyMask
+                            [ngClass]="{'form-control inverted-out text-left mt-3': !isMobile, 'input-valor': isMobile}"
+                            [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+                            formControlName="valor">
+                        <app-error-msg [control]="form.get('valor')"></app-error-msg>
+                        <span class="mt-3 d-block alerta-min">
+                            {{'deposito.valorMinimo' | translate}} {{ valorMinDeposito | currency }}
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3" *ngIf="permitirBonusPrimeiroDeposito">
+                <div class="col col-sm-6 permitirBonusPrimeiroDeposito">
+                    <label class="">{{'financeiro.desejaReceberBonusPrimeiroDeposito' | translate}}</label><br>
+                    <a class="btn-regras-bonus" (click)="abrirRegrasBonus()">Regras do Bônus</a>
+                    <div class="buttons-container mt-3">
+                        <div class="links-bonus">
+                            <a *ngIf="bonusEsportivo" class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'esportivo'}" (click)="selecionarOpcaoBonus('esportivo')">
+                                <div class="bonus">
+                                    <i class="radio"></i>
+                                </div>
+                                <div class="icone-bonus">
+                                    <i class="fa-solid fa-coins" style="font-size: 20px"></i>
+                                </div>
+                                <div>
+                                    <span style="margin-left: 5px">{{'financeiro.receberBonus' | translate}}</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="links-bonus" *ngIf="bonusCassino" >
+                            <a class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'cassino'}" (click)="selecionarOpcaoBonus('cassino')">
+                                <div class="bonus">
+                                    <i class="radio"></i>
+                                </div>
+                                <div class="icone-bonus">
+                                    <i class="fa-solid fa-coins" style="font-size: 20px"></i>
+                                </div>
+                                <div>
+                                    <span style="margin-left: 5px">{{'financeiro.receberBonusCassino' | translate}}</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="links-bonus">
+                            <a  class="opcao-bonus" [ngClass]="{'active':opcaoBonus === 'nenhum'}" (click)="selecionarOpcaoBonus('nenhum')">
+                                <div class="bonus">
+                                    <i class="radio"></i>
+                                </div>
+                                <div class="icone-bonus">
+                                    <i class="fa-solid fa-square-xmark" style="font-size: 20px"></i>
+                                </div>
+                                <div>
+                                    <span style="margin-left: 5px">{{'financeiro.naoQueroBonus' | translate}}</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <app-error-msg [control]="form.get('bonus')"></app-error-msg>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-sm-3 deposito-pix">
+                    <div class="form-group group-buttons">
+                        <button type="submit" class="btn btn-custom btn-block" [disabled]="submitting">
+                            {{'geral.depositar' | translate}}
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div> -->
 </div>
-
 <ng-template #verificarPromocaoModal let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Atenção!</h4>
