widgets da home

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
@@ -1,1 +1,21 @@
-<p>cards-modalidade works!</p>
+<div class="list-modalidades">
+    <ul>
+        <li>
+            Esporte
+        </li>
+        <li>
+            Esporte
+            <span>Ao Vivo</span>
+        </li>
+        <li>
+            Cassino
+        </li>
+        <li>
+            Cassino
+            <span>Ao Vivo</span>
+        </li>
+        <li>
+            E-Sports
+        </li>
+    </ul>
+</div>
