Ajuste no dropdown-menu para sempre se manter a esquerda independente da altura da tela

--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -177,6 +177,10 @@ nav::-webkit-scrollbar {
     padding: 0;
 }
 
+.dropdown-menu-custom {
+    inset: 0px 0px auto auto !important;
+}
+
 .language-dropdown .flag-icon {
     font-size: 24px;
     clip-path: circle();
