--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -78,7 +78,7 @@
                         <span><i class="fa-solid fa-user"></i></span>
                     </div>
                 </a>
-                <div class="dropdown-menu-right" aria-labelledby="navbarDropdown" ngbDropdownMenu>
+                <div class="dropdown-menu-right dropdown-menu-custom" aria-labelledby="navbarDropdown" ngbDropdownMenu>
                     <a class="btnClose hide-desktop" aria-label="Close" (click)="dropDownConta.close()">
                         <span aria-hidden="true">&times;</span>
                     </a>
