--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,14 @@
 
     <app-banners></app-banners>
 
-    <app-cards-modalidade></app-cards-modalidade>
-    <app-cassino></app-cassino>
-    <app-cassino-aovivo></app-cassino-aovivo>
-    <app-cassino-populares></app-cassino-populares>
-    <app-jogos-aovivo></app-jogos-aovivo>
-    <app-jogos-destaque></app-jogos-destaque>
+    <app-cards-modalidade class="widgets"></app-cards-modalidade>
+    <app-cassino class="widgets" linkAll="/casino/c/wall/todos" [games]="gamesCassino"></app-cassino>
+    <app-cassino class="widgets" linkAll="/casino/cl/wall-live/todos" [games]="gamesCassino" [title]="'geral.cassinoAoVivo' | translate"></app-cassino>
+    <app-jogos-aovivo class="widgets"></app-jogos-aovivo>
+    <app-jogos-destaque class="widgets"></app-jogos-destaque>
 
 </div>
 
 <app-footer></app-footer>
+
+<app-bilhete></app-bilhete>
