--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -1,23 +1,139 @@
 <div id="deposito-pix">
     <form [formGroup]="form" (ngSubmit)="solicitarDeposito()" *ngIf="!pix">
         <div id="deposit-container">
-            <div id="payment-gateway-column">
-                <h3>Gateway de pagamento</h3>
-                <div class="options-container payment-gateway-options">
-                    <a class="payment-gateway-option">
-                        <div class="payment-gateway">
+            <section id="payment-method-column">
+                <h3>{{'financeiro.paymentGateway' | translate}}</h3>
+                <div class="options-container payment-method-options">
+                    <a class="payment-method-option" [ngClass]="{'active': paymentMethodSelected === paymentMethod}" (click)="changePaymentMethodOption(paymentMethod)">
+                        <div class="payment-method">
                             <i class="radio"></i>
                         </div>
-                        <div class="payment-gateway-icon"></div>
+                        <div class="payment-method-icon"
+                            [ngStyle]="{'background-image': 'url(https://cdn.wee.bet/img/cassino/logos/' + paymentMethod + '.png)'}"
+                        ></div>
                         <div>
-                            <span style="margin-left: 5px">{{metodoPagamento}}</span>
+                            <span class="payment-method-name">{{paymentMethod | formatPaymentMethod}}</span>
                         </div>
+                        <i class="fa-solid fa-caret-right"></i>
                     </a>
                 </div>
-            </div>
-            <div id="deposit-details">
-                <h3>Detalhes do depósito</h3>
-            </div>
+            </section>
+            <section id="deposit-details">
+                <h3>{{'deposito.depositDetails' | translate}}</h3>
+                <div id="details-wrapper">
+                    <div class="details-container">
+                        <div class="details-text">
+                            Para realizar um depósito via {{paymentMethod | formatPaymentMethod}},
+                            insira o valor que deseja depositar no campo abaixo, selecione se deseja receber o bônus de
+                            primeiro depósito, informe o código promocional se houver ( se estiver habilitado essa opção de bônus)
+                            e clique no botão “ Depositar ”. Um QR Code será criado e aparecerá na tela para que possa
+                            realizar o pagamento.
+                        </div>
+                        <div class="details-amount">
+                            <label class="label">{{'deposito.enterAmount' | translate}}</label>
+                            <input currencyMask
+                                class="form-control inverted-out"
+                                [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+                                formControlName="valor">
+                            <app-error-msg [control]="form.get('valor')"></app-error-msg>
+                            <div class="min-amount">
+                                {{'deposito.valorMinimo' | translate}} {{ valorMinDeposito | currency }}
+                            </div>
+                            <div class="shortcut-amounts">
+                                <button type="button" class="btn" (click)="changeAmount(10)">
+                                    {{10 | currency}}
+                                </button>
+                                <button type="button" class="btn" (click)="changeAmount(20)">
+                                    {{20 | currency}}
+                                </button>
+                                <button type="button" class="btn" (click)="changeAmount(50)">
+                                    {{50 | currency}}
+                                </button>
+                                <button type="button" class="btn" (click)="changeAmount(75)">
+                                    {{75 | currency}}
+                                </button>
+                                <button type="button" class="btn" (click)="changeAmount(100)">
+                                    {{100 | currency}}
+                                </button>
+                                <button type="button" class="btn" (click)="changeAmount(200)">
+                                    {{200 | currency}}
+                                </button>
+                            </div>
+                        </div>
+                        <div class="details-bonus">
+                            <h3 (click)="toggleBonusSection()">
+                                <span>{{'geral.rollover' | translate}}</span>
+                                <i class="fa m-0"
+                                    [ngClass]="{'fa-angle-down': !droppedBonus, 'fa-angle-up': droppedBonus}"
+                                ></i>
+                            </h3>
+                            <div id="bonus-wrapper">
+                                <div class="bonus-text">
+                                    {{'financeiro.desejaReceberBonusPrimeiroDeposito' | translate}}
+                                    &nbsp;<a class="btn-regras-bonus" (click)="abrirRegrasBonus()">{{'rollover.bonusRules' | translate}}</a>
+                                </div>
+                                <div class="options-container bonus-options">
+                                    <a class="bonus-option" [ngClass]="{'active':bonusOption === 'esportivo'}" (click)="changeBonusOption('esportivo')">
+                                        <div class="bonus">
+                                            <i class="radio"></i>
+                                        </div>
+                                        <div class="bonus-info bonus-type">{{'bet.sportsBetting' | translate}}</div>
+                                        <div class="bonus-info bonus-amount">
+                                            <span class="with-bonus">
+                                                R$ 100 {{'geral.rollover' | translate}}
+                                            </span>
+                                        </div>
+                                        <div class="bonus-info bonus-percent" [ngStyle]="{'font-size': '10px'}">100% {{'rollover.upTo' | translate}} R$100</div>
+                                    </a>
+                                    <a class="bonus-option" [ngClass]="{'active':bonusOption === 'cassino'}" (click)="changeBonusOption('cassino')">
+                                        <div class="bonus">
+                                            <i class="radio"></i>
+                                        </div>
+                                        <div class="bonus-info bonus-type">{{'bet.casinoBetting' | translate}}</div>
+                                        <div class="bonus-info bonus-amount">
+                                            <span class="with-bonus">
+                                                R$ 100 {{'geral.rollover' | translate}}
+                                            </span>
+                                        </div>
+                                        <div class="bonus-info bonus-percent" [ngStyle]="{'font-size': '10px'}">100% {{'rollover.upTo' | translate}} R$100</div>
+                                    </a>
+                                    <a class="bonus-option" [ngClass]="{'active':bonusOption === 'nenhum'}" (click)="changeBonusOption('nenhum')">
+                                        <div class="bonus">
+                                            <i class="radio"></i>
+                                        </div>
+                                        <div class="bonus-info bonus-type">{{'rollover.bonusForfeited' | translate}}</div>
+                                        <div class="bonus-info bonus-amount">
+                                            <span class="without-bonus">
+                                                {{'rollover.noBonus' | translate}}
+                                            </span>
+                                        </div>
+                                        <div class="bonus-info bonus-percent" [ngStyle]="{'font-size': '10px'}">{{'rollover.bonusWillBeForfeited' | translate}}</div>
+                                    </a>
+                                </div>
+                                <app-error-msg [control]="form.get('bonus')"></app-error-msg>
+                            </div>
+                        </div>
+                        <div class="details-promo-code">
+                            <h3 (click)="togglePromoCodeSection()">
+                                <span>{{'geral.promoCode' | translate}}</span>
+                                <i class="fa m-0"
+                                    [ngClass]="{'fa-angle-down': !droppedPromoCode, 'fa-angle-up': droppedPromoCode}"
+                                ></i>
+                            </h3>
+                            <div id="promo-code-wrapper">
+                                <input class="form-control inverted-out" formControlName="promoCode" [attr.placeholder]="'geral.promoCodePlaceholder' | translate">
+                            </div>
+                        </div>
+                        <div class="details-submit">
+                            <div class="form-group group-buttons">
+                                <button type="submit" class="btn btn-custom btn-block" [disabled]="submitting">
+                                    {{'geral.depositar' | translate}}
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </form>
     <!-- <div class="row">
