--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
@@ -168,7 +168,7 @@
     </div>
 </div>
 <div #listagem class="content-sports content-sports-list" infiniteScroll (scrolled)="exibirMais()">
-    <app-banners *ngIf="!showLoadingIndicator"></app-banners>
+    <app-banners [showLoadingIndicator]="showLoadingIndicator"></app-banners>
     <app-destaques (maisCotacoesDestaque)="maisCotacoes($event)" [jogosDestaque]="jogosDestaque"></app-destaques>
     <div class="wrap-sticky">
 
