--- a/src/app/clientes/promocao/promocao.component.css
+++ b/src/app/clientes/promocao/promocao.component.css
@@ -161,6 +161,10 @@
     cursor: pointer;
 }
 
+.custom-modal-width .modal-dialog {
+    max-width: 514px;
+}
+
 @media only screen and (max-width: 834px) {
     .tabs a {
         width: 50%;
