--- a/src/styles.css
+++ b/src/styles.css
@@ -1640,6 +1640,10 @@ input[type=number]::-webkit-outer-spin-button {
     max-width: 700px;
 }
 
+.modal-537 .modal-dialog {
+    max-width: 537px;
+}
+
 .btn.disabled, .btn:disabled {
     opacity: 0.3;
 }
@@ -1927,12 +1931,6 @@ label {
 .btn-block {
     display: block;
     width: 100%;
-}
-
-@media only screen and (min-width: 835px) {
-    .custom-modal-size .modal-dialog {
-        max-width: 537px;
-    }
 }
 
 @media only screen and (max-width: 480px) {
